; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_core/ed25519/extr_core_ed25519.c_crypto_core_ed25519_scalar_reduce.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_core/ed25519/extr_core_ed25519.c_crypto_core_ed25519_scalar_reduce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_core_ed25519_NONREDUCEDSCALARBYTES = common dso_local global i32 0, align 4
@crypto_core_ed25519_SCALARBYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_core_ed25519_scalar_reduce(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @crypto_core_ed25519_NONREDUCEDSCALARBYTES, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %5, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %6, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = trunc i64 %8 to i32
  %13 = call i32 @memcpy(i8* %10, i8* %11, i32 %12)
  %14 = call i32 @sc25519_reduce(i8* %10)
  %15 = load i8*, i8** %3, align 8
  %16 = load i32, i32* @crypto_core_ed25519_SCALARBYTES, align 4
  %17 = call i32 @memcpy(i8* %15, i8* %10, i32 %16)
  %18 = trunc i64 %8 to i32
  %19 = call i32 @sodium_memzero(i8* %10, i32 %18)
  %20 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %20)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @sc25519_reduce(i8*) #2

declare dso_local i32 @sodium_memzero(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
